# workflow

./: .gitignore  AGENTS.md
.claude/: settings.json
.claude_logs/: activity_summary.json  claude_session_25784761.jsonl  claude_session_56ac6cc5.jsonl  claude_session_58d56503.jsonl  claude_session_77cf2edf.jsonl  claude_session_853f11ab.jsonl  claude_session_9a29a2c0.jsonl  claude_session_f5f02d94.jsonl  claude_session_ff4efc3d.jsonl
docs/: bdd-tdd-workflow-guide.md  claude-code-hooks-guide.md  example-workflow-natural-language.md  full-sdlc-design-document.md  sdlc-workflow-implementation.md  tdd-bdd-enforcement-rules.md
test-agent-project/: .coverage  README.md  main.py  pyproject.toml
test-agent-project/.claude_logs/: activity_summary.json  claude_session_9a29a2c0.jsonl
test-agent-project/docs/: AUTH_API.md  TASK-2-IMPLEMENTATION.md
test-agent-project/src/test_agent_project/: __init__.py
test-agent-project/src/test_agent_project/api/: __init__.py  auth_endpoints.py
test-agent-project/src/test_agent_project/auth/: __init__.py  jwt_handler.py  security.py  validators.py
test-agent-project/tasks/: task_001_password_validation.md  task_002_login_endpoint.md  task_003_user_profile_update.md
test-agent-project/tests/: __init__.py
test-agent-project/tests/test_api/: test_auth_endpoints.py  test_auth_models.py  test_auth_security_performance.py
test-agent-project/tests/test_auth/: __init__.py  test_jwt_tokens.py  test_password_security.py  test_validators.py
tmp/: CLAUDE.md  CLAUDE_LOGGING_SETUP.md  COMPLETE_LOGGING_SYSTEM.md  FINAL_LOGGING_FORMAT.md  (+8 more)
(+79 files in other folders)
